@@ -153,6 +153,8 @@ struct  mne     mne[] = {
     {   NULL,   "xch",          S_XCH,          0,      0x1380    },
     {   NULL,   "pushaf",       S_PUSHAF,       0,      0x0072    },
     {   NULL,   "popaf",        S_POPAF,        0,      0x0073    },
+    {   NULL,   "push",         S_PUSHAF,       0,      0x0072    },
+    {   NULL,   "pop",          S_POPAF,        0,      0x0073    },
     {   NULL,   "add",          S_ADD,          0,      0x2800    },
     {   NULL,   "addc",         S_ADDC,         0,      0x0060    },
     {   NULL,   "sub",          S_SUB,          0,      0x2900    },
@@ -174,6 +176,7 @@ struct  mne     mne[] = {
     {   NULL,   "set1",         S_SET1,         0,      0x0000    },
     {   NULL,   "ceqsn",        S_CEQSN,        0,      0x0000    },
     {   NULL,   "t0sn",         S_T0SN,         0,      0x0000    },
+    {   NULL,   "t1sn",         S_T1SN,         0,      0x0001    },
     {   NULL,   "izsn",         S_IZSN,         0,      0x0062    },
     {   NULL,   "dzsn",         S_DZSN,         0,      0x0063    },
     {   NULL,   "call",         S_CALL,         0,      0x3800    },
